# pantable

./: .buildinfo  .bumpversion.cfg  .cookiecutterrc  .coveragerc  .gitignore  .readthedocs.yml  .travis.yml  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.md  CONTRIBUTING.rst  MANIFEST.in  README.html  README.md  README.rst  TODO.md  environment.yml  genindex.html  index.html  makefile  modules.html  objects.inv  output.json  output.txt  pandoc-tables.py  pantable.cli.html  pantable.cli.pantable.html  pantable.cli.pantable2csv.html  pantable.codeblock_to_table.html  pantable.const.html  pantable.csv_to_table_ast.html  pantable.csv_to_table_markdown.html  pantable.html  pantable.read_csv.html  pantable.table_to_csv.html  pantable.util.html  pantable.version.html  py-modindex.html  pyproject.toml  requirements.txt  (+6 more)
.doctrees/: changelog.doctree  contributing.doctree  environment.pickle  index.doctree  installation.doctree  modules.doctree  pantable.ast.doctree  pantable.cli.doctree  pantable.cli.pantable.doctree  pantable.cli.pantable2csv.doctree  pantable.cli.pantable2csvx.doctree  pantable.codeblock_to_table.doctree  pantable.doctree  pantable.io.doctree  pantable.table_to_codeblock.doctree  pantable.util.doctree  readme.doctree  usage.doctree
.doctrees/api/: modules.doctree  pantable.ast.doctree  pantable.cli.doctree  pantable.cli.pantable.doctree  pantable.cli.pantable2csv.doctree  pantable.cli.pantable2csvx.doctree  pantable.codeblock_to_table.doctree  pantable.doctree  pantable.io.doctree  pantable.table_to_codeblock.doctree  pantable.util.doctree  pantable.util_numba.doctree
.github/: FUNDING.yml
.github/workflows/: pythonpackage.yml  sphinx.yml
_modules/: index.html
_modules/functools/: index.html
_modules/pantable/: codeblock_to_table.html  csv_to_table_ast.html  csv_to_table_markdown.html  read_csv.html  table_to_csv.html  util.html
_modules/pantable/ast/: index.html
_modules/pantable/cli/: pantable.html  pantable2csv.html
_modules/pantable/codeblock_to_table/: index.html
_modules/pantable/io/: index.html
_modules/pantable/table_to_codeblock/: index.html
_modules/pantable/util/: index.html
_sources/: README.rst.txt  index.rst.txt  installation.rst.txt  modules.rst.txt  pantable.cli.pantable2csv.rst.txt  pantable.cli.rst.txt  pantable.codeblock_to_table.rst.txt  pantable.const.rst.txt  pantable.csv_to_table_ast.rst.txt  pantable.csv_to_table_markdown.rst.txt  pantable.read_csv.rst.txt  pantable.rst.txt  pantable.table_to_codeblock.rst.txt  pantable.table_to_csv.rst.txt  pantable.util.rst.txt  pantable.version.rst.txt
_sources/api/: modules.rst.txt  pantable.ast.rst.txt  pantable.cli.pantable.rst.txt  pantable.cli.pantable2csvx.rst.txt  pantable.cli.rst.txt  pantable.io.rst.txt  pantable.rst.txt  pantable.util_numba.rst.txt
_static/: documentation_options.js  pygments.css
api/modules/: index.html
api/pantable/: index.html
api/pantable.ast/: index.html
api/pantable.cli/: index.html
api/pantable.cli.pantable/: index.html
api/pantable.cli.pantable2csv/: index.html
api/pantable.cli.pantable2csvx/: index.html
api/pantable.codeblock_to_table/: index.html
api/pantable.io/: index.html
api/pantable.table_to_codeblock/: index.html
api/pantable.util/: index.html
api/pantable.util_numba/: index.html
changelog/: index.html
contributing/: index.html
docs/: README.md  badges.csv  badges.markdown  changelog.md  comparison.csv  conf.py  example.csv  index.html  index.rst  makefile  usage.rst
docs/docs/: dot
docs/dot/: makefile  pipeline.dot
docs/reference/: index.rst  pantable.rst
genindex/: index.html
installation/: index.html
modules/: index.html
pandoc_tables/: pandoc_tables.py
pantable/: __init__.py  ast.py  codeblock_to_table.py  const.py  csv_to_table_ast.py  csv_to_table_markdown.py  index.html  io.py  pantable.py  pantable2csv.py  read_csv.py  table_to_codeblock.py  table_to_csv.py  util.py
pantable.ast/: index.html
pantable.cli/: index.html
pantable.cli.pantable/: index.html
pantable.cli.pantable2csv/: index.html
pantable.cli.pantable2csvx/: index.html
pantable.codeblock_to_table/: index.html
pantable.io/: index.html
pantable.table_to_codeblock/: index.html
pantable.util/: index.html
pantable/cli/: pantable.py  pantable2csv.py  pantable2csvx.py
py-modindex/: index.html
readme/: index.html
search/: index.html
src/pantable/: __init__.py  ast.py  codeblock_to_table.py  io.py  table_to_codeblock.py  util.py  util_numba.py
src/pantable/cli/: pantable.py  pantable2csv.py  pantable2csvx.py
test/: csv-tables.md  csv-tables.native
tests/: README.md  README.native  ast_test.py  context.py  csv_tables.md  csv_tables.native  csv_tables.xls  csv_tables.xlsx  csv_tables_test.py  grid_tables.pkl  pandoc_tables_test.py  reference_convert2table.native  reference_idempotent.native  reference_pantable.native  requirements.txt  tables.native  test_check_table_options.py  test_convert2table.md  test_convert2table.py  test_init_table_options.py  test_native.py  test_pantable.md  test_pantable.py  test_parse_table_list.py  test_parse_table_options.py  test_parsers.py  test_read_csv.py  test_regularize_table_list.py  test_to_bool.py  to_pkl.py  util_test.py
tests/files/: makefile  md_codeblock_idem_test.py  md_codeblock_test.py  md_test.py  native_iden_test.py  native_test.py  test_parsers.py
tests/files/md/: tables.md
tests/files/md_codeblock/: comparison.md  (+15 more)
tests/pantable/: context.py  test_auto_width.py  test_check_table_options.py  test_convert2table.py  test_csv_to_grid_tables.py  test_csv_to_pipe_tables.py  test_get_include.py  test_get_table_width.py  test_get_width.py  test_init_table_options.py  test_parse_alignment.py  test_parse_table_list.py  test_parse_table_options.py  test_parse_width.py  test_read_csv.py  test_read_data.py  test_regularize_table_list.py  test_to_bool.py
tests/pantable2csv/: context.py  test_ast2markdown.py  test_get_table_body_Table2list_list2csv.py  test_getparse_table_options_options2yaml.py  test_table2csv.py  test_table_to_csv.py
usage/: index.html
(+25 files in other folders)
